# edrFerd-backend

./: .gitignore  Cargo.toml  LICENSE  README.md
ai_client/python_openai/: README.md  main.py
config/: keys.json
src/: chunk.rs  core.rs  data_struct.rs  logger.rs  main.rs  static_server.rs
src/apis/: debug_server.rs  frontend_server.rs  mod.rs  server.rs
src/core/: maintain.rs  message.rs  mod.rs  receive.rs  send.rs
src/libs/: core.rs  data_struct.rs  key.rs  mod.rs  static_server.rs  world.rs
src/p2p/: mod.rs
src/server/: api_server.rs  debug_server.rs  frontend_server.rs  mod.rs
src/utils/: core.rs  data_struct.rs  key.rs  key_manager.rs  mod.rs
src/world/: mod.rs  work.rs
test_frontend/: package.json  pnpm-lock.yaml  vite.config.js
test_frontend/src/: App.vue
