[package]
name = "edrFerd"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4.27"
flexi_logger = "0.28.0"
chrono = { version = "0.4.41", features = ["serde"] }
serde = { version = "1.0.219", features = ["serde_derive"] }
foldhash = "0.1.5"
tokio = { version = "1.46.1", features = ["full"] }
blake3 = { version = "1.8.2", features = ["serde"] }
axum = "0.8.4"
rand = "0.9"
ed25519-dalek = { version = "2.2.0", features = ["rand_core", "serde"] }
serde_json = "1.0.141"
base64 = "0.22.1"
anyhow = "1.0.98"
libp2p = { version = "0.53", features = ["tokio", "tcp", "dns", "noise", "yamux", "mdns", "gossipsub", "macros"] }
futures = "0.3"
