[package]
name = "edrFerd"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4.27"
flexi_logger = "0.28.0"

tower-http = { version = "0.5.2", features = ["cors"] }

tokio = { version = "1.46.1", features = ["full"] }
axum = { version = "0.8.4", features = ["ws"] }
futures-util = "0.3"
rand = "0.9"
anyhow = "1.0.98"

foldhash = "0.1.5"
ed25519-dalek = { version = "2.2.0", features = ["rand_core", "serde"] }
blake3 = { version = "1.8.2", features = ["serde"] }

base64 = "0.22.1"
serde_json = "1.0.141"
serde = { version = "1.0.219", features = ["serde_derive"] }
chrono = { version = "0.4.41", features = ["serde"] }
reqwest = { version = "0.12.22", features = ["json"] }
